
	* htmlframe.c: remove e_scroll_frame ifdef, set scrolled window
	frame type.

	* htmliframe.c: remove e_scroll_frame ifdef, set scrolled window
	frame type.

2003-05-19  Radek Doulik  <rodo@ximian.com>

	* htmlengine.c (html_engine_update_event): set need_update flag
	when not realized
	(html_engine_realize): schedule update if need_update is TRUE

2003-05-19  Larry Ewing  <lewing@ximian.com>

	* htmlurl.c: fix some of the url code to make testgtkhtml happier.

2003-05-16  Radek Doulik  <rodo@ximian.com>

	* htmlprinter.c (printer_get_page_width): don't convert value,
	it's not needed
	(printer_get_page_height): use gnome_print_config_get_page_size
	instead of deprecated gnome_print_job_get_page_size_from_config
	(BTW, the gnome_print_config_get_page_size calls this deprecated
	function, funny :)

	* testgtkhtml.c (print_preview_cb): as below
	(printer_get_page_width): ditto
	after discussion with danw I made margins be fixed value (.5")

	* htmlprinter.c (draw_text): descender is negative value in
	gnome2, code updated
	(calc_text_size): ditto
	(calc_text_size_bytes): ditto

	* htmlengine-print.c: remove SPACING_FACTOR - not needed and broken, 

	* htmlprinter.c (TEMP_MARGIN): increase margins a little bit (.5")
	and make them fixed size instead of percentage of width

2003-05-16  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (add_bindings): as below

	* keybindingsrc.emacs: don't use ISO_Left_Tab, Shift Tab is mapped
	to it

2003-05-13  Larry Ewing  <lewing@ximian.com>

	* htmlfontmanager.c (html_font_manager_set_default): clear both
	fonts if fixed font description changes so that if the fixed font
	changes but the variable does not the plain painter will still
	pick up the change.  See bug #41751.

2003-05-08  Radek Doulik  <rodo@ximian.com>

	* gtkhtml.c (key_press_event): workaround about Shift-TAB
	problem. gtk activates TAB binding even for Shift-TAB. we don't
	call key_press_handler of parent class for Shift-TAB now to avoid